test/errors/importer-multiple-imports/hook2.jsx
import { useMemo, useEffect } from "react";
/**
 * @__IMPORTABLE_HOOK__
 */

export default function useTestHook() {
  useMemo(() => {});
  useEffect(() => {});
}
